--- a/anther faile/sample/MID.html
+++ b/anther faile/sample/MID.html
@@ -56,6 +56,7 @@
       if (userName === "") {
         alert("名前を入力してください。");
         return;
+        console.log(userName)
       }
 
       // 一意のIDを生成してデータ保存
