--- a/anther faile/sample/MID.html
+++ b/anther faile/sample/MID.html
@@ -65,6 +65,7 @@
         name: userName,
         timestamp: Date.now()
       });
+      console.log(name,timestamp);
 
       // 遷移（roomIDとconnectionIDを渡す）
       setTimeout(() => {
