--- a/anther faile/sample/MID.html
+++ b/anther faile/sample/MID.html
@@ -71,9 +71,9 @@
       console.log("タイムスタンプ:",timestamp);
 
       // 遷移（roomIDとconnectionIDを渡す）
-      /*setTimeout(() => {
+      setTimeout(() => {
         window.location.href = `https://dondenden.github.io/sample-education-system/anther%20faile/sample/BOT?room=${encodeURIComponent(roomID)}&connection=${connectionID}`;
-      }, 100);*/
+      }, 2000);
     }
   </script>
 </body>
