--- a/anther faile/sample/BOT.html
+++ b/anther faile/sample/BOT.html
@@ -162,6 +162,7 @@
     // 自動削除設定
     db.ref(`user/${roomID}/${connectionID}`).onDisconnect().remove();
     db.ref(`camerakey/${roomID}`).onDisconnect().remove();
+    db.ref(`MID/${roomID}/${connectionID}`).onDisconnect().remove();
   </script>
 </head>
 
